# tide-fn-dsa

./: Cargo.toml  README.md  fn-dsa-classic-review.md  pqclean-parity.md
docs/: fn-dsa-classic-review.md  pqclean-parity.md  pqclean-security-plan.md
fn-dsa/: Cargo.toml
fn-dsa-comm/: Cargo.toml
fn-dsa-comm/src/: lib.rs
fn-dsa-kgen/: Cargo.toml
fn-dsa-kgen/src/: lib.rs  pqclean_compat.rs
fn-dsa-sign/: Cargo.toml
fn-dsa-sign/src/: flr.rs  flr_native.rs  lib.rs  poly.rs  sign_avx2.rs
fn-dsa-vrfy/: Cargo.toml
fn-dsa-vrfy/src/: lib.rs
fn-dsa/benches/: keygen.rs  sign.rs  util.rs  verify.rs
fn-dsa/src/: lib.rs
tide-fn-dsa/: Cargo.toml
tide-fn-dsa-comm/: Cargo.toml
tide-fn-dsa-comm/src/: codec.rs  lib.rs  mq.rs  mq_avx2.rs  shake.rs  shake256x4_avx2.rs
tide-fn-dsa-kgen/: Cargo.toml  build.rs
tide-fn-dsa-kgen/src/: fxp.rs  gauss.rs  lib.rs  mp31.rs  ntru.rs  ntru_avx2.rs  poly.rs  poly_avx2.rs  pqclean_compat.rs  pqclean_float.rs  pqclean_flr.rs  pqclean_ntru.rs  pqclean_ntru_debug.rs  pqclean_parity_tests.rs  pqclean_poly.rs  pqclean_ref.rs  pqclean_test_shims.rs  vect.rs  vect_avx2.rs  zint31.rs  zint31_avx2.rs
tide-fn-dsa-kgen/tests/pqclean_ref/: oracle_1024.c  oracle_512.c  pqclean_ref.h
tide-fn-dsa-kgen/tests/pqclean_ref/falcon-1024/: keygen.c
tide-fn-dsa-kgen/tests/pqclean_ref/falcon-512/: keygen.c
tide-fn-dsa-sign/: Cargo.toml
tide-fn-dsa-sign/src/: flr.rs  flr_emu.rs  flr_native.rs  lib.rs  poly.rs  poly_avx2.rs  sampler.rs  sampler_avx2.rs  sign_avx2.rs
tide-fn-dsa-vrfy/: Cargo.toml
tide-fn-dsa-vrfy/src/: lib.rs
tide-fn-dsa/benches/: keygen.rs  sign.rs  util.rs  verify.rs
tide-fn-dsa/src/: lib.rs
