[workspace]
members = [
    "tide-fn-dsa",
    "tide-fn-dsa-comm",
    "tide-fn-dsa-kgen",
    "tide-fn-dsa-sign",
    "tide-fn-dsa-vrfy",
]
resolver = "2"

[workspace.package]
authors = ["Thomas Pornin <thomas.pornin@nccgroup.com>"]
categories = ["cryptography", "no-std"]
description = "Tidecoin fork of rust-fn-dsa with FN-DSA, PQClean Falcon, and Tidecoin legacy compatibility"
edition = "2021"
keywords = ["cryptography", "fn-dsa", "falcon", "tidecoin"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/tidecoin/tide-fn-dsa"
rust-version = "1.82"

[workspace.dependencies]
# main dependencies
rand_core = "0.6"
zeroize = { version = "1.8", features = [ "zeroize_derive" ] }
cpufeatures = "0.2"
# dev-only dependencies
sha2 = "0.10"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2"
#libm = "0.2.11"

[profile.test]
opt-level = 3
