[workspace]
members = [
    "tide-fn-dsa",
    "tide-fn-dsa-comm",
    "tide-fn-dsa-kgen",
    "tide-fn-dsa-sign",
    "tide-fn-dsa-vrfy",
]
resolver = "2"

[workspace.package]
authors = ["Thomas Pornin <thomas.pornin@nccgroup.com>"]
categories = ["cryptography", "no-std"]
description = "Tidecoin fork of rust-fn-dsa with FN-DSA, PQClean Falcon, and Tidecoin legacy compatibility"
edition = "2021"
keywords = ["cryptography", "fn-dsa", "falcon", "tidecoin"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/tidecoin/tide-fn-dsa"
rust-version = "1.82"

[workspace.dependencies]
# main dependencies
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.8", default-features = false, features = [ "alloc", "zeroize_derive" ] }
cpufeatures = { version = "0.2", default-features = false }
# dev-only dependencies
sha2 = { version = "0.10", default-features = false }
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2"
#libm = "0.2.11"

[profile.test]
opt-level = 3
