[package]
name = "tide-fn-dsa-comm"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
description = "Tidecoin internal shared utilities for FN-DSA, PQClean Falcon, and legacy Falcon support"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "fn_dsa_comm"

[dependencies]
rand_core.workspace = true
zeroize.workspace = true

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpufeatures.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = []
no_avx2 = []
shake256x4 = []
