[package]
name = "fn-dsa-kgen"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fn-dsa-comm = { version = "0.3", path = "../fn-dsa-comm" }
sha2.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[features]
default = []
no_avx2 = []
shake256x4 = []
