[package]
name = "tide-fn-dsa-kgen"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
description = "Tidecoin FN-DSA and Falcon key generation, including PQClean and PQHD deterministic compatibility paths"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "fn_dsa_kgen"

[dependencies]
fn-dsa-comm = { package = "tide-fn-dsa-comm", version = "0.4", path = "../fn-dsa-comm" }
sha2.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[features]
default = []
no_avx2 = []
shake256x4 = []
