[package]
name = "tide-fn-dsa-sign"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
description = "Tidecoin FN-DSA and Falcon signature generation, including PQClean and Tidecoin legacy Falcon profiles"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "fn_dsa_sign"

[dependencies]
fn-dsa-comm = { package = "tide-fn-dsa-comm", version = "0.4", path = "../fn-dsa-comm" }
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = []
small_context = []
no_avx2 = []
div_emu = []
sqrt_emu = []
shake256x4 = []
