[package]
name = "fn-dsa"
version = "0.3.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fn-dsa-comm = { version = "0.3", path = "../fn-dsa-comm" }
fn-dsa-kgen = { version = "0.3", path = "../fn-dsa-kgen" }
fn-dsa-sign = { version = "0.3", path = "../fn-dsa-sign" }
fn-dsa-vrfy = { version = "0.3", path = "../fn-dsa-vrfy" }

[dev-dependencies]
hex.workspace = true

[features]
default = []
no_avx2 = [
    "fn-dsa-comm/no_avx2",
    "fn-dsa-kgen/no_avx2",
    "fn-dsa-sign/no_avx2",
    "fn-dsa-vrfy/no_avx2",
]
shake256x4 = [
    "fn-dsa-comm/shake256x4",
    "fn-dsa-kgen/shake256x4",
    "fn-dsa-sign/shake256x4",
]
small_context = [ "fn-dsa-sign/small_context" ]
div_emu = [ "fn-dsa-sign/div_emu" ]
sqrt_emu = [ "fn-dsa-sign/sqrt_emu" ]

[[bench]]
name = "keygen"
path = "benches/keygen.rs"
harness = false

[[bench]]
name = "sign"
path = "benches/sign.rs"
harness = false

[[bench]]
name = "verify"
path = "benches/verify.rs"
harness = false
