[package]
name = "tide-fn-dsa"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
description = "Tidecoin umbrella package for FN-DSA, PQClean Falcon, and Tidecoin legacy Falcon support"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "fn_dsa"

[dependencies]
fn-dsa-comm = { package = "tide-fn-dsa-comm", version = "0.4", path = "../fn-dsa-comm" }
fn-dsa-kgen = { package = "tide-fn-dsa-kgen", version = "0.4", path = "../fn-dsa-kgen" }
fn-dsa-sign = { package = "tide-fn-dsa-sign", version = "0.4", path = "../fn-dsa-sign" }
fn-dsa-vrfy = { package = "tide-fn-dsa-vrfy", version = "0.4", path = "../fn-dsa-vrfy" }

[dev-dependencies]
hex.workspace = true

[features]
default = []
no_avx2 = [
    "fn-dsa-comm/no_avx2",
    "fn-dsa-kgen/no_avx2",
    "fn-dsa-sign/no_avx2",
    "fn-dsa-vrfy/no_avx2",
]
shake256x4 = [
    "fn-dsa-comm/shake256x4",
    "fn-dsa-kgen/shake256x4",
    "fn-dsa-sign/shake256x4",
]
small_context = [ "fn-dsa-sign/small_context" ]
div_emu = [ "fn-dsa-sign/div_emu" ]
sqrt_emu = [ "fn-dsa-sign/sqrt_emu" ]

[[bench]]
name = "keygen"
path = "benches/keygen.rs"
harness = false

[[bench]]
name = "sign"
path = "benches/sign.rs"
harness = false

[[bench]]
name = "verify"
path = "benches/verify.rs"
harness = false
