[package]
name = "tide-fn-dsa-kgen"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
description = "Tidecoin FN-DSA and Falcon key generation, including PQClean and PQHD deterministic compatibility paths"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tide_fn_dsa_kgen"

[dependencies]
tide-fn-dsa-comm = { version = "0.4", path = "../tide-fn-dsa-comm", default-features = false }
sha2.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[build-dependencies]
cc = "1"

[features]
default = []
no_avx2 = ["tide-fn-dsa-comm/no_avx2"]
pqclean-ref = []
shake256x4 = ["tide-fn-dsa-comm/shake256x4"]
div_emu = []
sqrt_emu = []
