[package]
name = "tide-fn-dsa-sign"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
description = "Tidecoin FN-DSA and Falcon signature generation, including PQClean and Tidecoin legacy Falcon profiles"
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tide_fn_dsa_sign"

[dependencies]
tide-fn-dsa-comm = { version = "0.4", path = "../tide-fn-dsa-comm", default-features = false }
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true

[features]
default = []
small_context = []
no_avx2 = ["tide-fn-dsa-comm/no_avx2"]
div_emu = []
sqrt_emu = []
shake256x4 = ["tide-fn-dsa-comm/shake256x4"]
